# intro-to-ml-python

./: Ch02-statlearn-lab.ipynb  Ch03-linreg-lab.ipynb  Ch04-classification-lab.ipynb  Ch05-resample-lab.ipynb  main.py  pyproject.toml
