[project]
name = "intro-to-ml-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "islp>=0.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
]
